<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Coisa de Noiva</string>
    <string name="action_incluir">Novo</string>
    <string name="action_trash">Excluir</string>
    <string name="action_save">Salvar</string>
    <string name="action_edit">Editar</string>
    <string name="action_settings">Novo Convidado</string>
    <string name="action_email">Enviar por Email</string>
    <string name="action_add">Novo</string>
    <string name="alert_yes">Sim</string>
    <string name="alert_no">Não</string>
    <string name="mss_alert">Você tem certeza que quer deletar?</string>
    <string name="title_alert">Corfirmação</string>
    <string name="title_activity_tab_host_fragment">TabHostFragment</string>
    <string name="title_activity_my_tab_factory">MyTabFactory</string>
    <string name="title_activity_my_page_adapter">MyPageAdapter</string>
    <string name="title_activity_chart">ChartActivity</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="title_activity_menu">MenuActivity</string>

    <string name="title_activity_configuracao">Configuração</string>
    <string name="title_confirmado">Confirmaram</string>
    <string name="title_naoconfirmado">Não Confirmaram</string>
    <string name="title_naosabe">Não Sabem</string>
    <string name="title_total">Total Convidados</string>
    <string name="title_dividas">Status das Dividas</string>
    <string name="title_convidados">Status dos Convidados</string>
    <string name="title_divida">Adicionar Divida</string>
    <string name="title_activity_add_debito">Nova Dívida</string>
    <string name="nomedadivida">Nome da Dívida</string>
    <string name="valorparcela">Valor da Parcela</string>
    <string name="addparcela">Adicione a Parcela</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancelar</string>

    <string name="datainvalida">Data Inválida</string>

    <string name="div_pagas">Dívidas Pagas</string>
    <string name="div_pendentes">Dívidas Pendentes</string>


    <string name="myforne">Meus Fornecedores</string>
    <string name="textforn">Deseja adicionar este fornecedor como devedor?</string>
    <string name="txtDividacriada">Dívida Adicionada.</string>
    <string name="numparcelasinvalidas">O número de parcelas pagas não pode ser maior que o total de parcelas</string>
    <string name="valortotal">Valor Total</string>
    <string name="pendente">Valor Pendente</string>
    <string name="pago">Valor Pago</string>

    <string name="faltamhome">Faltam</string>
    <string name="frasehome">Para o Grande Dia!</string>
    <string name="diashome">Dias</string>

    <string name="NomedaDvida">Nome da Dívida</string>
    <string name="ValordaParcela">Valor da Parcela</string>
    <string name="QuantidadesdeParcelas">Quantidades de Parcelas</string>
    <string name="ParcelasPagas">Parcelas Pagas</string>
    <string name="NomedaNoiva">Nome da Noiva</string>
    <string name="NomedoNoivo">Nome do Noivo</string>
    <string name="datadocasamento">Data do Casamento</string>
    <string name="nomenoconvite">Nome no Convite</string>
    <string name="numerodeconvidados">Números de Convidados</string>
    <string name="quantidadeconvidados">Quantidade</string>

    <string name="danoiva">Noiva</string>
    <string name="donoivo">Noivo</string>
    <string name="confirmoupresença">Confirmou presença?</string>
    <string name="sim">Sim</string>
    <string name="no">Não</string>
    <string name="talvez">Talvez</string>
    <string name="menu_settings">Convidado Novo</string>
    <string name="convidadode">Convidado da(o)</string>

    <string name="vezes">  vez(es)</string>
    <string name="pagas">   pagas</string>
</resources>
