<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.iasmimc.myapplication.Screen.Configuracao"
    android:orientation="vertical">
<EditText
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:hint="@string/NomedaNoiva"
    android:id="@+id/noivaNome"/>
  <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/NomedoNoivo"
      android:id="@+id/noivoNome"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/datadocasamento"
        android:layout_margin="5dp"/>

    <DatePicker xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/dialog_date_datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        >
    </DatePicker>


</LinearLayout>
