
<GridLayout     xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:gravity="center"   >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/faltamhome"
            android:textColor="@color/random1"
            android:textStyle="bold"
            android:textSize="40dp"/>
        </LinearLayout>

<LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    android:orientation="horizontal"
    android:gravity="center"   >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:text="0"
        android:textColor="@color/black"
        android:id="@+id/diasFaltam"
        android:textStyle="bold"
        android:textSize="80dp"/>

</LinearLayout>
    <LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"

    android:orientation="horizontal"
    android:gravity="center"   >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:text="@string/diashome"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20dp"
        />

</LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="80px">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/frasehome"
            android:textColor="@color/random1"
            android:textStyle="bold"
            android:textSize="30dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:id="@+id/timerhome"
        android:gravity="center">
    </LinearLayout>
</GridLayout>